# fastapi_project

./: .coverage  .gitignore  database.db  docker-compose.yaml  pyproject.toml
fast_zero/: app.py  models.py
migrations/: env.py
migrations/versions/: 85cab19a49e5_adding_column_updated_at_to_users_table.py  9049694109e2_adding_column_updated_at_to_users_tables.py  c3796c318d0d_create_users_table.py  d79ae37dbaf9_create_users_table.py
src/: app.py  database.py  schemas.py  security.py
src/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
